applications/home-automation/base/litellm/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: litellm
  labels:
    app: litellm
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 4000
      targetPort: http
      protocol: TCP
  selector:
    app: litellm
